--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "gatsby-starter-out-of-phase",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
-  "version": "0.1.0",
+  "description": "A visualizer of the OOP Out Of Phase slider effect",
+  "version": "0.1.1",
   "license": "0BSD",
   "scripts": {
-    "build": "gatsby build --prefix-paths",
+    "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
@@ -18,6 +18,8 @@
     "@react-three/drei": "^4.1.8",
     "@react-three/fiber": "^6.0.14",
     "gatsby": "^3.2.1",
+    "gatsby-plugin-postcss": "^4.13.0",
+    "postcss": "^8.2.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "three": "^0.127.0"
