changed width to 100%

--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "name": "gatsby-starter-out-of-phase",
-  "private": true,
+  "private": false,
   "description": "A visualizer of the OOP Out Of Phase slider effect",
   "version": "0.1.1",
   "license": "0BSD",
+  "keywords": [
+    "gatsby",
+    "gatsby-plugin",
+    "slider",
+    "out-of-phase"
+  ],
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
@@ -14,18 +20,15 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "@react-spring/three": "^9.1.1",
-    "@react-three/drei": "^4.1.8",
-    "@react-three/fiber": "^6.0.14",
-    "gatsby": "^3.2.1",
+    "gatsby": "^3.13.0",
     "gatsby-plugin-postcss": "^4.13.0",
-    "postcss": "^8.2.6",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "three": "^0.127.0"
+    "postcss": "^8.3.6",
+    "postcss-nested": "^5.0.6",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "prettier": "2.2.1"
+    "prettier": "2.3.2"
   },
   "repository": {
     "type": "git",
