--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
   "dependencies": {
     "gatsby": "^3.13.0",
     "gatsby-plugin-postcss": "^4.13.0",
+    "gatsby-plugin-react-helmet": "^4.13.0",
     "postcss": "^8.3.6",
     "postcss-nested": "^5.0.6",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-moving-slider": "file:../../michelangeloalesi/react-moving-slider/react-moving-slider-0.1.5.tgz"
   },
   "devDependencies": {
     "prettier": "2.3.2"
